# socialhub

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  run_cache_test.bat
addon-manager/: Cargo.toml
addon-manager/src/: error.rs  lib.rs  manager.rs  plugin.rs  sandbox.rs
addon-manager/src/stremio/: cinemeta.rs  mod.rs  tests.rs
addon-manager/src/tests/: mod.rs
addon-manager/src/web/: mod.rs  tests.rs
benches/: media_upload.rs
common/: Cargo.toml
common/src/: cache.rs  config.rs  lib.rs  utils.rs  validation.rs
config/: default.toml
core/auth/: Cargo.toml  README.md
core/auth/src/: error.rs  handlers.rs  lib.rs  models.rs  service.rs
core/auth/src/tests/: mod.rs
core/common/: Cargo.toml
core/common/src/: cache.rs  error.rs  lib.rs  logging.rs  logging_test.rs  metrics.rs  middleware.rs  utils.rs
core/media/: Cargo.toml  README.md
core/media/src/: error.rs  handlers.rs  lib.rs  models.rs  service.rs
core/media/src/tests/: mod.rs
core/social/: Cargo.toml  README.md
core/social/src/: error.rs  handlers.rs  lib.rs  models.rs  service.rs
core/social/src/tests/: mod.rs
core/streaming/: Cargo.toml  README.md
core/streaming/src/: error.rs  handlers.rs  lib.rs  models.rs  service.rs
core/streaming/src/tests/: mod.rs
docs/api/: openapi.yaml
src/: api_docs.rs  config.rs  lib.rs  main.rs  routes.rs
src/common/: cache.rs  cache_test.rs  mod.rs
src/config/: mod.rs  types.rs
src/routes/: addons.rs  mod.rs
tests/: benchmark_test.rs  config_test.rs  integration_tests.rs
tests/integration/: auth_media_flow.rs  cache_integration_test.rs  mod.rs  social_streaming_flow.rs
