[package]
name = "socialhub"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1", features = ["postgres", "r2d2"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
jsonwebtoken = "9.1"
bcrypt = "0.15"
moka = { version = "0.12", features = ["future"] }
socialhub-auth = { path = "core/auth" }
socialhub-media = { path = "core/media" }
socialhub-social = { path = "core/social" }
socialhub-streaming = { path = "core/streaming" }
socialhub-common = { path = "core/common" }
utoipa = { version = "4.2", features = ["actix_extras", "yaml", "openapi_extensions"] }
utoipa-swagger-ui = { version = "5.0", features = ["actix-web"] }

[dev-dependencies]
actix-rt = "2.9"
tokio = { version = "1.0", features = ["full", "test-util"] }
futures = "0.3"
bytes = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["async_tokio"] }
toml = "0.8"

[workspace]
members = [
    "core/common",
    "core/streaming",
    "core/auth",
    "core/social",
    "core/media"
]

[[bin]]
name = "socialhub"
path = "src/bin/server.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
harness = true

[[test]]
name = "config"
path = "tests/config_test.rs"

[[test]]
name = "benchmarks"
path = "tests/benchmark_test.rs"

[[bench]]
name = "media_upload"
harness = false

[profile.test]
opt-level = 0
debug = true
