[package]
name = "socialhub"
version = "0.1.0"
edition = "2021"
default-run = "server"

[workspace]
members = [
    "core/auth",
    "core/media",
    "core/social",
    "core/streaming",
    "core/common",  # Adicionar esta linha
    "addon-manager",
]

[dependencies]
# Precisamos verificar se não há dependências circulares ou conflitos
socialhub-auth = { path = "core/auth" }
socialhub-media = { path = "core/media" }
socialhub-social = { path = "core/social" }
socialhub-streaming = { path = "core/streaming" }
socialhub-core = { path = "core/common" }
addon-manager = { path = "addon-manager" }
actix-web = "4.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
moka = { version = "0.12", features = ["future"] }
log = "0.4"
env_logger = "0.10"
serde_json = "1.0"
dotenv = "0.15"

[dev-dependencies]
actix-rt = "2.8"
criterion = "0.5"
toml = "0.8"
