[package]
name = "socialhub-addon-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
thiserror = "1.0"

[dev-dependencies]
actix-rt = "2.9"
