[package]
name = "addon-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full", "macros"] }  # Adicionado feature "macros"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
actix-web = "4.0"
urlencoding = "2.1"
utoipa = { version = "4.2", features = ["actix_extras"] }  # Mesma versão do workspace root

[dev-dependencies]
mockito = "0.31"  # Mudando para versão específica que tem server_url()
tokio-test = "0.4"
actix-rt = "2.8"  # Adicionando actix-rt para testes
