[package]
name = "socialhub-common"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4"] }
log = "0.4"
thiserror = "1.0"
derive_more = "0.99"
moka = { version = "0.12", features = ["future"] }
