[package]
name = "socialhub-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4", features = ["cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.1"
bcrypt = "0.15"
diesel = { version = "2.1", features = ["postgres"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
thiserror = "1.0"
utoipa = { version = "4.2", features = ["actix_extras"] }  # Adicionado

[dev-dependencies]
actix-rt = "2.9"
tokio = { version = "1.0", features = ["full", "test-util"] }
