[package]
name = "socialhub-common"
version = "0.1.0"
edition = "2021"

[dependencies]
moka = { version = "0.12", features = ["future"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
