[package]
name = "socialhub-core"
version = "0.1.0"
edition = "2021"

[dependencies]
moka = { version = "0.12", features = ["future"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1.0", features = ["full", "test-util"] }
