[package]
name = "socialhub-media"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
thiserror = "1.0"
futures = "0.3"
utoipa = { version = "4.2", features = ["actix_extras"] }  # Adicionado
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
actix-rt = "2.9"
bytes = "1.0"
env_logger = "0.10"
